// ---------------------------------------------
// Phantom programming language
// changelog.txt
// https://github.com/notcl4y14/phantom-lang
// ---------------------------------------------

// ---------------------------------------------
// UNDER DEVELOPMENT VERSIONS
// ---------------------------------------------

// 1/12/2023
- Added positions to tokens
- Added sub-functions .left() and .right() to Token.setPos()
- Added more token types
	+ Number
	+ String
	+ Identifier
---------
- Created phantom.bat
- Created test.pht
- Added Token.Type
- Added more token types
	+ Parentheses, brackets, braces
	+ Symbols
		* Dot
		* Comma
		* Colon
		* Semicolon
		* Ampersand
		* Pipe
- Token.value now is null by default
---------
- The error now gets the filename without the path
---------
- Added filename to the lexer
---------
- Initial commit
- Created files
	+ main.js
	+ lang.js
	+ lexer.js
	+ position.js
	+ token.js
	+ package.json
	+ error.js
- Created the "tests" folder
	+ operators.pht