@@ -1,3 +1,4 @@
+let utils = require("util");
 let fs = require("fs");
 let path = require("path");
 
@@ -14,8 +15,9 @@ let outputError = function(res) {
 // -------------------------------------------------------------------------------
 let lang = {};
 lang.Lexer = require("./frontend/lexer");
+lang.Parser = require("./frontend/parser");
 
-lang.runFile = function(filename) {
+lang.runFile = function(filename, flags) {
 
 	// https://stackoverflow.com/a/32804614
 	// Checking if the file exists
@@ -29,11 +31,14 @@ lang.runFile = function(filename) {
 	// Getting the filename without its path
 	let filenameNoPath = path.basename(filename);
 
-	lang.runCode(filenameNoPath, code);
+	lang.runCode(filenameNoPath, code, flags);
 	return ;
 }
 
-lang.runCode = function(filename, code) {
+lang.runCode = function(filename, code, flags) {
+	let showLexer = flags.includes("--lexer");
+	let showParser = flags.includes("--parser");
+	// -------------------------------------------------
 	// Lexer
 	let lexer = new lang.Lexer(filename, code);
 	let lexerResult = lexer.lexerize();
@@ -42,7 +47,21 @@ lang.runCode = function(filename, code) {
 		return outputError(lexerResult);
 	}
 
-	console.log(lexerResult.list);
+	if (showLexer) {
+		console.log(lexerResult.list);
+	}
+
+	// Parser
+	let parser = new lang.Parser(filename, lexerResult.list);
+	let ast = parser.parse();
+
+	if (checkError(ast)) {
+		return outputError(ast);
+	}
+
+	if (showParser) {
+		console.log(utils.inspect(ast.node, {showHidden: false,  depth: null, colors: true}));
+	}
 }
 
 module.exports = lang;
