@@ -1,4 +1,1 @@
-2+4 - 5;
-"lol 'a'";
-lol_fooBar;
-x1, x2;
+1 * 2 + 3
